[package]
name = "loremio_push_service"
version = "0.1.0"
authors = ["Martin Nowosad <mrtnnwsd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.redis]
version = "*"